--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -97,8 +97,8 @@ footer {
   .stats-container {
     display: flex;
     flex-direction: row;
-    width: 90%;
-    justify-content: space-between;
+    width: 100%;
+    justify-content: space-around;
     margin-bottom: 0;
   }
 }
